# celo-nft-data-pull

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
nft_data_pull/: config.py  main.py
output/: nft_collection_info.csv  nft_info.csv  nft_token_attributes.csv  nft_transfers.csv
output/staging/: contract_token.csv  nft_contracts.csv  transactions.csv  transfers.csv
tests/: test_nft_data_pull.py  web3_test.py
tests/samples/: contract_abi.json  contracts.json  first_tx.json  nft_md.json  transactions.json  transfers.json
